--- a/ui/src/app/components/auth/login/login.component.html
+++ b/ui/src/app/components/auth/login/login.component.html
@@ -1,31 +1,30 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
   <div class="px-8 py-6 mt-4 text-left bg-white shadow-lg rounded-lg">
     <div class="flex justify-center">
-      {/* You can place a logo here */}
+      <!-- Você pode colocar um logo aqui, similar ao "OBank" na Figura 03 do PDF -->
       <h3 class="text-2xl font-bold text-center text-blue-600">OBank</h3>
     </div>
     <h3 class="mt-4 text-2xl font-bold text-center">Login</h3>
-    <form action="">
+    <form action=""> <!-- Considere usar (ngSubmit)="onSubmit()" e remover 'action' se estiver usando ReactiveFormsModule -->
       <div class="mt-4">
         <div>
-          <label class="block" for="cpf">CPF<label>
-              <input type="text" placeholder="CPF"
-                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
-          </label>
+          <label class="block" for="cpf">CPF</label> <!-- Fechamento da tag label corrigido -->
+          <input type="text" placeholder="CPF" id="cpf" name="cpf"
+                 class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
         </div>
         <div class="mt-4">
-          <label class="block" for="password">Senha<label>
-              <input type="password" placeholder="Senha"
-                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
-          </label>
+          <label class="block" for="password">Senha</label> <!-- Fechamento da tag label corrigido -->
+          <input type="password" placeholder="Senha" id="password" name="password"
+                 class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
         </div>
         <div class="flex items-baseline justify-between">
-          <button
+          <button type="submit"  type="submit"
             class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Login</button>
         </div>
         <div class="mt-6 text-grey-dark">
           Não tem conta?
-          <a class="text-blue-600 hover:underline" href="#"> {/* Update href for registration route */}
+          <!-- Atualize o href para a rota de registro quando ela estiver configurada -->
+          <a class="text-blue-600 hover:underline" href="#">
             Cadastrar
           </a>
         </div>
