--- a/ui/src/app/components/access-menu/access-menu.component.html
+++ b/ui/src/app/components/access-menu/access-menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen bg-gray-100">
+<!-- <div class="flex flex-col min-h-screen bg-gray-100">
   <header class="p-4 bg-white shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold text-blue-600">OBank</div>
@@ -19,4 +19,18 @@
       </div>
       </div>
   </main>
-</div>
+</div> -->
+
+<header>
+  <h1>Safe Bank</h1>
+  <nav>
+    <a routerLink="/menu/contas">Minhas Contas</a>
+    <a routerLink="/menu/deposito">Depositar</a>
+    <a routerLink="/menu/saque">Sacar</a>
+    <a routerLink="/menu/extrato">Extrato</a>
+    </nav>
+</header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
