--- a/ui/src/app/components/auth/login/login.component.html
+++ b/ui/src/app/components/auth/login/login.component.html
@@ -5,8 +5,7 @@
       <h3 class="text-2xl font-bold text-center text-blue-600">OBank</h3>
     </div>
     <h3 class="mt-4 text-2xl font-bold text-center">Login</h3>
-    <form action="">
-      <!-- Considere usar (ngSubmit)="onSubmit()" e remover 'action' se estiver usando ReactiveFormsModule -->
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mt-4">
         <div>
           <label class="block" for="cpf">CPF</label> <!-- Fechamento da tag label corrigido -->
