--- a/ui/src/app/components/auth/register/register.component.html
+++ b/ui/src/app/components/auth/register/register.component.html
@@ -75,7 +75,7 @@
         <div class="mt-6 text-grey-dark">
           Já possui conta?
           <!-- Correção 8: Uso de routerLink para navegação -->
-          <a class="text-blue-600 hover:underline" routerLink="/logar">
+          <a class="text-blue-600 hover:underline" [routerLink]="['/logar']">
             Login
           </a>
         </div>
