--- a/ui/src/app/components/auth/login/login.component.html
+++ b/ui/src/app/components/auth/login/login.component.html
@@ -43,7 +43,7 @@
         
         <div class="mt-6 text-grey-dark">
           Não tem conta?
-          <a class="text-blue-600 hover:underline" routerLink="/registrar">
+          <a class="text-blue-600 hover:underline" [routerLink]="['/registrar']">
             Registrar
           </a>
         </div>
